// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayDropDown renders dropdown menu when clicked 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-2"
        aria-expanded="true"
        aria-haspopup="menu"
        class="dropdown-toggle"
        style=""
      >
        Click Me
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu show"
        id="clay-dropdown-menu-2"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
          role="menu"
        >
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#one"
              role="menuitem"
            >
              one
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#two"
              role="menuitem"
            >
              two
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#three"
              role="menuitem"
            >
              three
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayDropDown renders with groups 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-7"
        aria-expanded="true"
        aria-haspopup="menu"
        class="dropdown-toggle"
        style=""
      >
        Click Me
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu show"
        id="clay-dropdown-menu-7"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
          role="menu"
        >
          <li
            class="dropdown-subheader"
            role="presentation"
          >
            Group #1
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#one"
              role="menuitem"
            >
              one
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#two"
              role="menuitem"
            >
              two
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#three"
              role="menuitem"
            >
              three
            </a>
          </li>
          <li
            class="dropdown-subheader"
            role="presentation"
          >
            Group #2
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#one"
              role="menuitem"
            >
              one
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#two"
              role="menuitem"
            >
              two
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#three"
              role="menuitem"
            >
              three
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayDropDown renders with icons 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-6"
        aria-expanded="true"
        aria-haspopup="menu"
        class="dropdown-toggle"
        style=""
      >
        Click Me
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu dropdown-menu-indicator-end dropdown-menu-indicator-start show"
        id="clay-dropdown-menu-6"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
          role="menu"
        >
          <li
            role="none"
          >
            <span
              class="dropdown-item"
              role="menuitem"
            >
              <span
                class="dropdown-item-indicator-start"
              >
                <svg
                  class="lexicon-icon lexicon-icon-trash"
                  role="presentation"
                >
                  <use
                    xlink:href="/foo/bar#trash"
                  />
                </svg>
              </span>
              Left
            </span>
          </li>
          <li
            role="none"
          >
            <span
              class="dropdown-item"
              role="menuitem"
            >
              Right
              <span
                class="dropdown-item-indicator-end"
              >
                <svg
                  class="lexicon-icon lexicon-icon-check"
                  role="presentation"
                >
                  <use
                    xlink:href="/foo/bar#check"
                  />
                </svg>
              </span>
            </span>
          </li>
          <li
            role="none"
          >
            <span
              class="dropdown-item"
              role="menuitem"
            >
              <span
                class="dropdown-item-indicator-start"
              >
                <svg
                  class="lexicon-icon lexicon-icon-trash"
                  role="presentation"
                >
                  <use
                    xlink:href="/foo/bar#trash"
                  />
                </svg>
              </span>
              Both
              <span
                class="dropdown-item-indicator-end"
              >
                <svg
                  class="lexicon-icon lexicon-icon-check"
                  role="presentation"
                >
                  <use
                    xlink:href="/foo/bar#check"
                  />
                </svg>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayDropDown renders with search input 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-5"
        aria-expanded="true"
        aria-haspopup="menu"
        class="dropdown-toggle"
        style=""
      >
        Click Me
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu show"
        id="clay-dropdown-menu-5"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <form
          class=""
        >
          <div
            class="dropdown-section"
          >
            <div
              class="input-group input-group-sm"
            >
              <div
                class="input-group-item"
              >
                <input
                  class="form-control input-group-inset input-group-inset-after"
                  type="text"
                  value="test"
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="btn btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="/foo/bar#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </form>
        <ul
          class="list-unstyled"
          role="menu"
        >
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#one"
              role="menuitem"
            >
              one
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#two"
              role="menuitem"
            >
              two
            </a>
          </li>
          <li
            role="none"
          >
            <a
              class="dropdown-item"
              href="#three"
              role="menuitem"
            >
              three
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
